--- a/style.css
+++ b/style.css
@@ -46,9 +46,6 @@ header{
 }
 .wave2 {
     position: relative;
-    top: 149px;
-    left: 0;
-
     padding-bottom:30px;
     width: 100%;
 
@@ -88,12 +85,20 @@ header{
     object-fit: contain;
 }
 
+.social-media__icon{
+    font-size:5.4rem;
+    color:#3C78EE;
+    margin:40px 20px;
+}
+a:hover>.social-media__icon{
+   color:rgb(60, 80, 238) 
+}
 /* About Me Section */
 .about{
-    position:relative;
     z-index:30;
     min-height:100vh;
     margin:0;
+    margin-top:200px;
 }
 /* Configuring titles */
 .about .title{
@@ -102,7 +107,6 @@ header{
     text-transform:uppercase;
     z-index:12;
 
-    position:relative;
 }
 /* To separate the about me title from the paragraph */
 .about p{
@@ -110,10 +114,9 @@ header{
 }
 /* Styles for the paragraph of about me */
 .about .about-me__info{
-    font-family: 'Ubuntu Condensed', sans-serif;
-    font-size:2.1rem;
-    padding-right:80px;
-    padding-left:10px;
+    padding:0 45px;
+    font-size:2.9rem;
+    font-weight: 300;
     margin-top:150px;
 }
 
@@ -142,10 +145,20 @@ header{
     color:white;
     margin-top:20px;
 }
+.languages__skills{
+   display:grid;
+   grid-template-columns:repeat(3,12rem);
+   grid-template-rows:repeat(3,12rem);
+   grid-gap:35px;
+   justify-content: center;
+   justify-items:center; 
+
+   margin:15px;
+   font-size:12rem; 
+}
 
 /* Projects Section */
 .projects{
-    min-height:100vh;
     padding:0 100px;
     margin-top:100px;
 }
