--- a/style.css
+++ b/style.css
@@ -157,9 +157,12 @@ a:hover>.social-media__icon{
    font-size:12rem; 
 }
 
+.carousel-caption{
+    color:black !important;
+}
 /* Projects Section */
 .projects{
-    padding:0 100px;
+    padding:0 50px;
     margin-top:100px;
 }
 /* Customizing the titles of the project section */
