--- a/style.css
+++ b/style.css
@@ -187,10 +187,9 @@ a:hover>.social-media__icon{
     font-size:2.4rem;
     font-family: 'Fredoka', sans-serif;
 }
-.carousel-item__button{
+.carousel-item__project a{
     font-size:2.05rem;
     color:white;
-    background-color:#3C78EE;
     padding:5px 10px;
     margin:15px 0;
     border-radius: 5px;
